--- a/src/Lxna.Launcher/Lxna.Launcher.csproj
+++ b/src/Lxna.Launcher/Lxna.Launcher.csproj
@@ -18,6 +18,9 @@
     <None Update="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update=".env.*">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
