--- a/src/Lxna.Launcher/Lxna.Launcher.csproj
+++ b/src/Lxna.Launcher/Lxna.Launcher.csproj
@@ -14,11 +14,27 @@
     <PackageReference Include="CommandLineParser" />
   </ItemGroup>
 
-  <ItemGroup>
-    <None Update="NLog.config">
+  <ItemGroup Condition=" '$(NativeDepsPlatform)' == 'Windows' ">
+    <None Update="Envs/win">
+      <Link>env</Link>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Update=".env.*">
+  </ItemGroup>
+  <ItemGroup Condition=" '$(NativeDepsPlatform)' == 'Linux' ">
+    <None Update="Envs/linux">
+      <Link>env</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+  <ItemGroup Condition=" '$(NativeDepsPlatform)' == 'OSX' ">
+    <None Update="Envs/osx">
+      <Link>env</Link>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="NLog.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
