--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -17,6 +17,7 @@
         "noprint",
         "Omni",
         "Omnius",
+        "Reconfig",
         "Remoting",
         "Resampler",
         "Resizer",
