--- a/.github/workflows/test-slim.yml
+++ b/.github/workflows/test-slim.yml
@@ -16,7 +16,7 @@ concurrency:
 
 env:
   StableTest: false
-  ContinuousIntegrationBuild: true
+  # ContinuousIntegrationBuild: true
 
 jobs:
   linux:
@@ -29,7 +29,7 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.202
+          dotnet-version: 8.x
       - name: Setup dotnet tool
         run: dotnet tool restore
       - name: Install dependencies
@@ -48,7 +48,7 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.202
+          dotnet-version: 8.x
       - name: Install dependencies
         run: dotnet restore
       - name: Test
