--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,7 +15,7 @@ concurrency:
 
 env:
   StableTest: true
-  ContinuousIntegrationBuild: true
+  # ContinuousIntegrationBuild: true
 
 jobs:
   linux:
@@ -28,7 +28,7 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.202
+          dotnet-version: 8.x
       - name: Setup dotnet tool
         run: dotnet tool restore
       - name: Install dependencies
@@ -47,7 +47,7 @@ jobs:
       - name: Setup dotnet
         uses: actions/setup-dotnet@v4
         with:
-          dotnet-version: 8.0.202
+          dotnet-version: 8.x
       - name: Install dependencies
         run: dotnet restore
       - name: Test
